--- a/less/specials/uploads.less
+++ b/less/specials/uploads.less
@@ -132,11 +132,6 @@ ul.mobileUserGallery {
 		text-align: center;
 		padding-bottom: 20px;
 
-		img {
-			max-width: 100%;
-			max-height: auto;
-		}
-
 		p { // description
 			color: #565656;
 			line-height: 1.2;
